# NetProg

./: CMakeCache.txt  CMakeLists.txt  Makefile  NetProg  PrimeThread.cpp  Timer.cpp  WorkerThreads.cpp  cmake_install.cmake  ov
Server_and_client/: klient.cpp  server.cpp
